# Polymarket

./: .gitignore  Cargo.toml  Readme.md  output.txt
.cursor/rules/: alloy-rules.mdc  rust-rules.mdc
src/: main.py  main.rs  pyproject.toml  schemas.rs  signature_params.rs
src/modules/: data.rs  execution.rs  logger.rs  mod.rs  monitor.rs  persistence.rs  split_merge.rs  trading.rs  types.rs  user_ws.rs  websocket.rs
sx-bet/: package.json
