[package]
name = "polymarket-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
http = "1.3.1"
polymarket-rs-client = { git = "https://github.com/robertprp/polymarket-rs-client" }
rust_decimal = "1.37.2"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.5.4"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.89"
ethers = { version = "2.0.14", default-features = false }
ethers-contract = { version = "2.0.14", default-features = false }
hex = "0.4.3"
alloy-primitives = "1.0.0"
alloy-sol-types = "1.3.1"
alloy-signer-local = "1.0.32"
alloy-dyn-abi = "1.3.1"
alloy-json-abi = "1.3.1"
serde_with = "3.0"
alloy = "1.0.32"
mongodb = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
